force-app/main/default/objects/TALEXO_Notification__c/TALEXO_Notification__c.object-meta.xml
<CustomObject>
    <label>TALCORE Notification</label>
    <pluralLabel>TALCORE Notifications</pluralLabel>
    <nameField>
        <label>Notification ID</label>
        <type>AutoNumber</type>
        <displayFormat>NOTIF-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>