force-app/main/default/objects/TALEXO_Notification__c/fields/IsRead__c.field-meta.xml
<CustomField>
    <fullName>IsRead__c</fullName>
    <label>Is Read</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>