force-app/main/default/objects/TALEXO_Notification__c/fields/RelatedUrl__c.field-meta.xml
<CustomField>
    <fullName>RelatedUrl__c</fullName>
    <label>Related URL</label>
    <type>Url</type>
</CustomField>