force-app/main/default/objects/TALEXO_Notification__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Lead</fullName><default>false</default><label>Lead</label></value>
            <value><fullName>Order</fullName><default>false</default><label>Order</label></value>
            <value><fullName>Quote</fullName><default>false</default><label>Quote</label></value>
            <value><fullName>Contract</fullName><default>false</default><label>Contract</label></value>
            <value><fullName>Payment</fullName><default>false</default><label>Payment</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>