force-app/main/default/objects/TALEXO_Notification__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Notifications</relationshipName>
    <relationshipLabel>TALCORE Notifications</relationshipLabel>
</CustomField>